# factortool

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TODO.md  config.json.dist  devbox.json  pyproject.toml  renovate.json
.github/: renovate.json
.github/workflows/: ci.yaml  test.yml  zizmor.yaml
src/factortool/: __about__.py  __init__.py  batch.py  config.py  constants.py  engine.py  factor.py  factordb.py  number.py  stats.py  util.py
src/factortool/analyzer/: __init__.py  main.py
src/factortool/cli/: __init__.py  main.py
tests/: __init__.py  test_factor.py
typings/gmpy2/: __init__.pyi
