[project]
name = "factortool"
description = "A tool to help perform and manage various integer factorization tasks."
readme = "README.md"
requires-python = ">=3.14.2"
license = "MIT"
authors = [{ name = "Jason Lynch", email = "jason@aexoden.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "flask>=3.1.2",
  "gmpy2>=2.2.2",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "requests>=2.32.5",
  "typed-argument-parser>=1.11.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/aexoden/factortool#readme"
Issues = "https://github.com/aexoden/factortool/issues"
Source = "https://github.com/aexoden/factortool"

[project.scripts]
analyzer = "factortool.analyzer.main:main"
factortool = "factortool.cli.main:main"

[dependency-groups]
dev = [
  "gmpy2-stubs>=2.2.1.5",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14",
  "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/factortool/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/factortool"]

#
# Mypy
#

[tool.mypy]
strict = true

#
# Ruff
#

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["COM812", "ISC001"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)SPDX-FileCopyrightText: \\d{4}"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
