[project]
name = "factortool"
description = "A tool to help perform and manage various integer factorization tasks."
readme = "README.md"
requires-python = "==3.14.4"
license = "MIT"
authors = [{ name = "Jason Lynch", email = "jason@aexoden.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "flask==3.1.3",
  "gmpy2==2.3.0",
  "loguru==0.7.3",
  "pydantic==2.13.4",
  "requests==2.33.1",
  "typed-argument-parser==1.12.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/aexoden/factortool#readme"
Issues = "https://github.com/aexoden/factortool/issues"
Source = "https://github.com/aexoden/factortool"

[project.scripts]
analyzer = "factortool.analyzer.main:main"
factortool = "factortool.cli.main:main"

[dependency-groups]
dev = [
  "gmpy2-stubs==2.2.1.5",
  "mypy==2.0.0",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "ruff==0.15.12",
  "types-requests==2.33.0.20260503",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/factortool/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/factortool"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["COM812", "ISC001"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)SPDX-FileCopyrightText: \\d{4}"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
